--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "promise_javascript_reloaded",
   "version": "1.0.0",
   "description": "",
+  "module": "ES6",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
